--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <button onclick="getUserChoice('Paper')" class="paperChar" id="paperSelect" disabled>🗒</button>
             <button onclick="getUserChoice('Scissors')" class="scissorsChar" id="scissorsSelect" disabled>✄</button>
             <br>
+            <input type="text" id="userInput" placeholder="Type rock, paper, or scissors..." />
+            <button onclick="submitChoice()">Submit</button>
+            <br>
             <button onclick="startGame()" id="gameStart">Start Game</button>
             <div id="gameInfo">
             <p id="userChoice">Your choice goes here...</p>
