--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
             <h3 class="scissorsChar"><ins>Scissors = Red</ins></h3>
             <button onclick="getUserChoice('rock')" class="rockChar" id="rockSelect" disabled>ᨒ</button>
             <button onclick="getUserChoice('paper')" class="paperChar" id="paperSelect" disabled>🗒</button>
-            <button onclick="getUserChoice('scissors')" class="scissorsChar" id="scissorsSelect" disabled>✄</button>
-            <br>
-            <input type="text" id="userInput" name="userInput" placeholder="Type rock, paper, or scissors..." />
-            <button onclick="submitChoice()">Submit</button>
-            <br>
+            <button onclick="getUserChoice('scissors')" class="scissorsChar" id="scissorsSelect" disabled>✄</button><br>
             <button onclick="startGame()" id="gameStart">Start Game</button>
             <div id="gameInfo">
             <p id="userChoice">Your choice goes here...</p>
