--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-length">
-        <title>Rock Paper Scissors</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <title>Rock Paper Scissors v2.0</title>
+        <link href="index.css" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1>Rock Paper Scissors</h1>
+            <h1>Rock Paper Scissors v2.0</h1>
         </header>
         <main>
-            <h2>Make your selection...</h2>
-            <div id="timer">Time left: 3</div>
-            <h3 class="rockChar"><ins>Rock = Gray</ins></h3>
-            <h3 class="paperChar"><ins>Paper = White</ins></h3>
-            <h3 class="scissorsChar"><ins>Scissors = Red</ins></h3>
-            <button onclick="getUserChoice('rock')" class="rockChar" id="rockSelect" disabled>ᨒ</button>
-            <button onclick="getUserChoice('paper')" class="paperChar" id="paperSelect" disabled>🗒</button>
-            <button onclick="getUserChoice('scissors')" class="scissorsChar" id="scissorsSelect" disabled>✄</button><br>
-            <button onclick="startGame()" id="gameStart">Start Game</button>
-            <div id="gameInfo">
-            <p id="userChoice">Your choice goes here...</p>
-            <p id="computerChoice">The computer's choice goes here...</p>
-            <p id="winner">The winner is announced here...</p>
-            <p id="playerScore">Player score: 0</p>
-            <p id="computerScore">Computer score: 0</p>
-            <p id="gameLead">Begin the game to see your progress!</p>
-            <button onclick="resetButton()" id="resetButton">Reset</button>
-            </div>
+            <table>
+                <tr id="bold">
+                    <td>Description</td>
+                    <td>Overview</td>
+                </tr>
+                <tr>
+                    <td><i>Rock Paper Scissors v2.0</i> is a more sophisticated<br>
+                        variant of the original rock paper scissors game, now with<br>
+                        a <strong>timer!</strong> You are no longer allowed to initiate<br>
+                        the game via pressing one of the buttons. Your fate will<br>
+                        be determined based on your reaction time. The choice<br>
+                        is up to you, and you must begin by pressing<br>
+                        "Start game". You are only given <strong>3 seconds</strong> to make<br>
+                        a choice and if nothing is selected, you are disqualified,<br>
+                        and the point will automatically go to the computer.
+                    </td>
+                    <td>Overview goes here</td>
+                </tr>
+            </table>
+            <br>
+            <h3>Here is the link to the Upgrade:</h3>
+            <a href="project.html">Rock Paper Scissors v2.0</a>
         </main>
-        <script src="script.js"></script>
+        <footer>Adrian Reyes Vargas</footer>
     </body>
 </html>
