--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                         is up to you, and you must begin by pressing<br>
                         "Start game". You are only given <strong>3 seconds</strong> to make<br>
                         a choice and if nothing is selected, you are disqualified,<br>
-                        and the point will automatically go to the computer.
+                        and the point will automatically go to the computer.<br>
+                        <u>You will be given another chance at redemption<br>
+                        every round.</u>
                     </td>
                     <td>Overview goes here</td>
                 </tr>
