rps final changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
                         <u>You will be given another chance at redemption<br>
                         every round.</u>
                     </td>
-                    <td>Overview goes here</td>
+                    <td>This might’ve been the hardest project I’ve<br>
+                        worked on in my opinion. Trying to implement<br> 
+                        a object named timer was possibly the most annoying<br>
+                        process of the entire project. What made it<br>
+                        worse is that back then I used to have<br>
+                        CSS connected to playerScore, computerScore,<br>
+                        And the gameLead. I had to get rid of it<br>
+                        After not being able to get them working at all.<br>
+                        I believe it took me around 3 hours for the whole project,<br>
+                        I hope you enjoy it as much as I did!</td>
                 </tr>
             </table>
             <br>
