--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </td>
                     <td>This might’ve been the hardest project I’ve<br>
                         worked on in my opinion. Trying to implement<br> 
-                        a object named timer was possibly the most annoying<br>
+                        an object named timer was possibly the most annoying<br>
                         process of the entire project. What made it<br>
                         worse is that back then I used to have<br>
                         CSS connected to playerScore, computerScore,<br>
